[gd_scene load_steps=74 format=2]

[ext_resource path="res://Actors/player/camera_rig/Camera_Rig.tscn" type="PackedScene" id=1]
[ext_resource path="res://Actors/player/Player.gd" type="Script" id=2]
[ext_resource path="res://Actors/player/model/Player_Model.tscn" type="PackedScene" id=3]
[ext_resource path="res://Actors/player/state_machine_player/shared/action_r/states/none.gd" type="Script" id=4]
[ext_resource path="res://Actors/player/state_machine_player/state_machine_action_r.gd" type="Script" id=5]
[ext_resource path="res://Actors/player/state_machine_player/shared/move/on_ground/states/walk.gd" type="Script" id=6]
[ext_resource path="res://Actors/player/state_machine_player/shared/move/on_ground/states/idle.gd" type="Script" id=7]
[ext_resource path="res://Actors/player/state_machine_player/state_machine_move.gd" type="Script" id=8]
[ext_resource path="res://Actors/player/ui/debug_ui/Debug_UI.tscn" type="PackedScene" id=9]
[ext_resource path="res://Actors/player/state_machine_player/shared/move/in_air/states/jump.gd" type="Script" id=10]
[ext_resource path="res://Actors/player/state_machine_player/shared/move/in_air/in_air.gd" type="Script" id=11]
[ext_resource path="res://Actors/player/state_machine_player/shared/move/on_ground/on_ground.gd" type="Script" id=12]
[ext_resource path="res://Actors/player/model/anim/anim_boneform/jab.anim" type="Animation" id=13]
[ext_resource path="res://Actors/player/state_machine_player/shared/move/in_water/in_water.gd" type="Script" id=14]
[ext_resource path="res://Actors/player/state_machine_player/shared/action_r/states/jab.gd" type="Script" id=15]
[ext_resource path="res://Actors/player/state_machine_player/shared/action_r/action_r.gd" type="Script" id=16]
[ext_resource path="res://Actors/player/state_machine_player/shared/move/motion.gd" type="Script" id=17]
[ext_resource path="res://Actors/player/state_machine_player/shared/shared.gd" type="Script" id=18]
[ext_resource path="res://Actors/player/state_machine_player/shared/action_l/states/none.gd" type="Script" id=19]
[ext_resource path="res://Actors/player/state_machine_player/shared/action_l/states/cast.gd" type="Script" id=20]
[ext_resource path="res://Actors/player/state_machine_player/state_machine_action_l.gd" type="Script" id=21]
[ext_resource path="res://Actors/player/state_machine_player/shared/action_l/action_l.gd" type="Script" id=22]
[ext_resource path="res://Actors/player/objects/bone_spear/needle_arm_raycast.gd" type="Script" id=23]
[ext_resource path="res://Actors/player/state_machine_player/shared/move/on_ground/states/idle_aim.gd" type="Script" id=24]
[ext_resource path="res://Actors/player/state_machine_player/shared/move/on_ground/states/walk_aim.gd" type="Script" id=25]
[ext_resource path="res://Actors/player/state_machine_player/shared/move/in_air/states/jump_aim.gd" type="Script" id=26]
[ext_resource path="res://Actors/player/state_machine_player/shared/move/in_air/states/fall.gd" type="Script" id=27]
[ext_resource path="res://Actors/player/state_machine_player/shared/move/in_air/states/fall_aim.gd" type="Script" id=28]
[ext_resource path="res://Actors/player/state_machine_player/shared/action_r/states/jab_aim.gd" type="Script" id=29]
[ext_resource path="res://Actors/player/state_machine_player/shared/action_l/states/cast_aim.gd" type="Script" id=30]
[ext_resource path="res://Actors/player/state_machine_player/shared/move/in_air/states/wall_stick.gd" type="Script" id=31]
[ext_resource path="res://Actors/player/state_machine_player/shared/action_r/states/jab_stick.gd" type="Script" id=32]
[ext_resource path="res://Actors/player/jab_stick_jump.gd" type="Script" id=33]
[ext_resource path="res://Actors/player/state_machine_player/shared/move/in_air/states/stick_jump.gd" type="Script" id=34]
[ext_resource path="res://Actors/player/model/anim/anim_pill/playerstick_jump.anim" type="Animation" id=35]
[ext_resource path="res://Actors/player/model/anim/animationplayer.gd" type="Script" id=36]
[ext_resource path="res://Actors/player/model/anim/anim_boneform/none.anim" type="Animation" id=37]
[ext_resource path="res://Actors/player/model/anim/anim_pill/fall.anim" type="Animation" id=39]

[sub_resource type="SphereMesh" id=28]
radius = 0.05
height = 16.0

[sub_resource type="SpatialMaterial" id=29]
albedo_color = Color( 0, 0.6, 1, 1 )
emission_enabled = true
emission = Color( 0, 0.6, 1, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=30]
radius = 0.05

[sub_resource type="SpatialMaterial" id=31]
albedo_color = Color( 1, 0, 0, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=32]
radius = 0.05

[sub_resource type="SpatialMaterial" id=33]
albedo_color = Color( 0, 1, 0.164706, 1 )
emission_enabled = true
emission = Color( 0, 1, 0.164706, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=35]
radius = 0.02
height = 1.0

[sub_resource type="CapsuleShape" id=1]
height = 4.0

[sub_resource type="AnimationNodeBlend2" id=2]

[sub_resource type="AnimationNodeBlend2" id=3]

[sub_resource type="AnimationNodeTimeSeek" id=4]

[sub_resource type="AnimationNodeTimeSeek" id=5]

[sub_resource type="AnimationNodeTimeSeek" id=6]

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "none"

[sub_resource type="AnimationNodeStateMachine" id=8]
states/none/node = SubResource( 7 )
states/none/position = Vector2( 452, 134 )

[sub_resource type="AnimationNodeAnimation" id=36]
animation = "jab"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "none"

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachine" id=13]
states/jab/node = SubResource( 36 )
states/jab/position = Vector2( 260, 108 )
states/none/node = SubResource( 10 )
states/none/position = Vector2( 90, 108 )
transitions = [ "none", "jab", SubResource( 37 ), "jab", "none", SubResource( 38 ) ]
graph_offset = Vector2( -299, -4 )

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "none"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "stick_jump"

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachine" id=18]
states/none/node = SubResource( 14 )
states/none/position = Vector2( 48, 105 )
states/stick_jump/node = SubResource( 15 )
states/stick_jump/position = Vector2( 243, 105 )
transitions = [ "stick_jump", "none", SubResource( 16 ), "none", "stick_jump", SubResource( 17 ) ]
graph_offset = Vector2( -534, -9 )

[sub_resource type="AnimationNodeTimeScale" id=19]

[sub_resource type="AnimationNodeTimeScale" id=20]

[sub_resource type="AnimationNodeTimeScale" id=21]

[sub_resource type="AnimationNodeBlendTree" id=22]
graph_offset = Vector2( -895, -31.5 )
nodes/Blend2/node = SubResource( 3 )
nodes/Blend2/position = Vector2( 140, -60 )
"nodes/Blend2 2/node" = SubResource( 2 )
"nodes/Blend2 2/position" = Vector2( 140, 120 )
nodes/SeekActionL/node = SubResource( 4 )
nodes/SeekActionL/position = Vector2( -340, 60 )
nodes/SeekActionR/node = SubResource( 5 )
nodes/SeekActionR/position = Vector2( -340, 180 )
nodes/SeekMotion/node = SubResource( 6 )
nodes/SeekMotion/position = Vector2( -340, -60 )
nodes/StateMachineActionL/node = SubResource( 8 )
nodes/StateMachineActionL/position = Vector2( -580, 60 )
nodes/StateMachineActionR/node = SubResource( 13 )
nodes/StateMachineActionR/position = Vector2( -580, 180 )
nodes/StateMachineMotion/node = SubResource( 18 )
nodes/StateMachineMotion/position = Vector2( -580, -60 )
nodes/TimeScaleActionL/node = SubResource( 19 )
nodes/TimeScaleActionL/position = Vector2( -160, 60 )
nodes/TimeScaleActionR/node = SubResource( 20 )
nodes/TimeScaleActionR/position = Vector2( -160, 180 )
nodes/TimeScaleMotion/node = SubResource( 21 )
nodes/TimeScaleMotion/position = Vector2( -160, -60 )
nodes/output/position = Vector2( 420, 80 )
node_connections = [ "output", 0, "Blend2 2", "SeekMotion", 0, "StateMachineMotion", "SeekActionR", 0, "StateMachineActionR", "Blend2 2", 0, "TimeScaleMotion", "Blend2 2", 1, "TimeScaleActionR", "SeekActionL", 0, "StateMachineActionL", "TimeScaleActionL", 0, "SeekActionL", "TimeScaleMotion", 0, "SeekMotion", "TimeScaleActionR", 0, "SeekActionR" ]

[sub_resource type="AnimationNodeStateMachinePlayback" id=23]

[sub_resource type="AnimationNodeStateMachinePlayback" id=24]

[sub_resource type="Animation" id=25]
resource_name = "none"

[sub_resource type="SphereMesh" id=26]
radius = 0.06
height = 0.1

[sub_resource type="SpatialMaterial" id=27]
albedo_color = Color( 0, 1, 0.164706, 1 )
emission_enabled = true
emission = Color( 0, 1, 0.164706, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=34]
albedo_color = Color( 0.952941, 0, 1, 1 )
emission_enabled = true
emission = Color( 0.952941, 0, 1, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[node name="Player" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Body" parent="." instance=ExtResource( 3 )]

[node name="Skeleton" parent="Body/Armature" index="0"]
transform = Transform( -1, 0, -1.50996e-07, 0, 1, 0, 1.50996e-07, 0, -1, 0, 0, 0 )
bones/28/bound_children = [ NodePath("RightArmController") ]

[node name="RightArmController" type="BoneAttachment" parent="Body/Armature/Skeleton" index="1"]
transform = Transform( -1, -5.96046e-08, -6.70552e-07, 7.30157e-07, 1, 6.70552e-07, 6.70552e-08, 8.34465e-07, -1, -0.516965, 4.86701, -0.0179158 )
bone_name = "RightArmController"

[node name="RayCast" type="RayCast" parent="Body/Armature/Skeleton/RightArmController"]
cast_to = Vector3( 0, 0, 0 )
script = ExtResource( 23 )

[node name="Debug_Point2" type="MeshInstance" parent="Body/Armature/Skeleton/RightArmController"]
transform = Transform( 0.999999, 2.30847e-07, 3.53371e-14, -1.94247e-14, -4.37114e-08, 1, 2.30846e-07, -1, -4.37114e-08, 5.96046e-06, 0, -8.0214 )
visible = false
mesh = SubResource( 28 )
material/0 = SubResource( 29 )

[node name="X_Debug" type="MeshInstance" parent="Body/Armature/Skeleton/RightArmController/Debug_Point2"]
transform = Transform( -4.37114e-08, 1, 1.50706e-14, -1, -4.37114e-08, 0, -1.7053e-13, -1.57972e-13, 1, -2.86102e-06, -4.63423, -3.8147e-06 )
mesh = SubResource( 30 )
material/0 = SubResource( 31 )

[node name="Y_Debug" type="MeshInstance" parent="Body/Armature/Skeleton/RightArmController/Debug_Point2"]
transform = Transform( -4.37114e-08, -4.37114e-08, 1, -1, -4.37114e-08, -4.37114e-08, 4.37111e-08, -1, -4.37119e-08, -2.86102e-06, -4.63423, -4.76837e-06 )
mesh = SubResource( 32 )
material/0 = SubResource( 33 )

[node name="Y_Debug2" type="MeshInstance" parent="Body/Armature/Skeleton/RightArmController/Debug_Point2"]
transform = Transform( -4.37114e-08, -4.37114e-08, 1, -1, -4.37114e-08, -4.37114e-08, 4.37111e-08, -1, -4.37119e-08, -4.05312e-06, -8.0214, 0.475611 )
mesh = SubResource( 35 )
material/0 = SubResource( 33 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 3, 0 )
shape = SubResource( 1 )

[node name="Camera_Rig" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0 )

[node name="State_Machines" type="Node" parent="."]

[node name="State_Machine_Move" type="Node" parent="State_Machines"]
script = ExtResource( 8 )
START_STATE = NodePath("Shared/Motion/On_Ground/Idle")

[node name="Shared" type="Node" parent="State_Machines/State_Machine_Move"]
script = ExtResource( 18 )

[node name="Motion" type="Node" parent="State_Machines/State_Machine_Move/Shared"]
script = ExtResource( 17 )

[node name="On_Ground" type="Node" parent="State_Machines/State_Machine_Move/Shared/Motion"]
script = ExtResource( 12 )

[node name="Idle" type="Node" parent="State_Machines/State_Machine_Move/Shared/Motion/On_Ground"]
script = ExtResource( 7 )

[node name="Walk" type="Node" parent="State_Machines/State_Machine_Move/Shared/Motion/On_Ground"]
script = ExtResource( 6 )

[node name="Idle_Aim" type="Node" parent="State_Machines/State_Machine_Move/Shared/Motion/On_Ground"]
script = ExtResource( 24 )

[node name="Walk_Aim" type="Node" parent="State_Machines/State_Machine_Move/Shared/Motion/On_Ground"]
script = ExtResource( 25 )

[node name="In_Air" type="Node" parent="State_Machines/State_Machine_Move/Shared/Motion"]
script = ExtResource( 11 )

[node name="Jump" type="Node" parent="State_Machines/State_Machine_Move/Shared/Motion/In_Air"]
script = ExtResource( 10 )

[node name="Jump_Aim" type="Node" parent="State_Machines/State_Machine_Move/Shared/Motion/In_Air"]
script = ExtResource( 26 )

[node name="Fall" type="Node" parent="State_Machines/State_Machine_Move/Shared/Motion/In_Air"]
script = ExtResource( 27 )

[node name="Fall_Aim" type="Node" parent="State_Machines/State_Machine_Move/Shared/Motion/In_Air"]
script = ExtResource( 28 )

[node name="Stick_Wall" type="Node" parent="State_Machines/State_Machine_Move/Shared/Motion/In_Air"]
script = ExtResource( 31 )

[node name="Stick_Jump" type="Node" parent="State_Machines/State_Machine_Move/Shared/Motion/In_Air"]
script = ExtResource( 34 )

[node name="In_Water" type="Node" parent="State_Machines/State_Machine_Move/Shared/Motion"]
script = ExtResource( 14 )

[node name="Timer_Move" type="Timer" parent="State_Machines/State_Machine_Move"]
one_shot = true

[node name="Timer_Aim" type="Timer" parent="State_Machines/State_Machine_Move"]
one_shot = true

[node name="State_Machine_Action_L" type="Node" parent="State_Machines"]
script = ExtResource( 21 )
START_STATE = NodePath("Shared/Action_L/None")

[node name="Shared" type="Node" parent="State_Machines/State_Machine_Action_L"]
script = ExtResource( 18 )

[node name="Action_L" type="Node" parent="State_Machines/State_Machine_Action_L/Shared"]
script = ExtResource( 22 )

[node name="None" type="Node" parent="State_Machines/State_Machine_Action_L/Shared/Action_L"]
script = ExtResource( 19 )

[node name="Cast" type="Node" parent="State_Machines/State_Machine_Action_L/Shared/Action_L"]
script = ExtResource( 20 )

[node name="Cast_Aim" type="Node" parent="State_Machines/State_Machine_Action_L/Shared/Action_L"]
script = ExtResource( 30 )

[node name="Timer_Action_L" type="Timer" parent="State_Machines/State_Machine_Action_L"]

[node name="State_Machine_Action_R" type="Node" parent="State_Machines"]
script = ExtResource( 5 )
START_STATE = NodePath("Shared/Action_R/None")

[node name="Shared" type="Node" parent="State_Machines/State_Machine_Action_R"]
script = ExtResource( 18 )

[node name="Action_R" type="Node" parent="State_Machines/State_Machine_Action_R/Shared"]
script = ExtResource( 16 )

[node name="None" type="Node" parent="State_Machines/State_Machine_Action_R/Shared/Action_R"]
script = ExtResource( 4 )

[node name="Jab" type="Node" parent="State_Machines/State_Machine_Action_R/Shared/Action_R"]
script = ExtResource( 15 )

[node name="Jab_Aim" type="Node" parent="State_Machines/State_Machine_Action_R/Shared/Action_R"]
script = ExtResource( 29 )

[node name="Jab_Stick" type="Node" parent="State_Machines/State_Machine_Action_R/Shared/Action_R"]
script = ExtResource( 32 )

[node name="Jab_Stick_Jump" type="Node" parent="State_Machines/State_Machine_Action_R/Shared/Action_R"]
script = ExtResource( 33 )

[node name="Timer_Action_R" type="Timer" parent="State_Machines/State_Machine_Action_R"]
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Debug_UI" parent="UI" instance=ExtResource( 9 )]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 22 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Blend2/blend_amount = 0.0
"parameters/Blend2 2/blend_amount" = 0.99
parameters/SeekActionL/seek_position = -1.0
parameters/SeekActionR/seek_position = -1.0
parameters/SeekMotion/seek_position = -1.0
parameters/StateMachineActionL/playback = SubResource( 23 )
parameters/StateMachineActionR/playback = SubResource( 23 )
parameters/StateMachineMotion/playback = SubResource( 24 )
parameters/TimeScaleActionL/scale = 1.0
parameters/TimeScaleActionR/scale = 1.0
parameters/TimeScaleMotion/scale = 1.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall = ExtResource( 39 )
anims/jab = ExtResource( 13 )
anims/none = SubResource( 25 )
anims/none_armature = ExtResource( 37 )
anims/stick_jump = ExtResource( 35 )
script = ExtResource( 36 )

[node name="Debug_Point" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 26 )
material/0 = SubResource( 27 )

[node name="Debug_Point2" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 26 )
material/0 = SubResource( 34 )

[connection signal="state_machine_camera_state_stack_changed" from="Camera_Rig" to="UI/Debug_UI" method="_on_Camera_Rig_state_machine_camera_state_stack_changed"]
[connection signal="move_state_stack_changed" from="State_Machines/State_Machine_Move" to="UI/Debug_UI" method="_on_State_Machine_Move_move_state_stack_changed"]
[connection signal="action_l_state_stack_changed" from="State_Machines/State_Machine_Action_L" to="UI/Debug_UI" method="_on_State_Machine_Action_L_action_l_state_stack_changed"]
[connection signal="action_r_state_stack_changed" from="State_Machines/State_Machine_Action_R" to="UI/Debug_UI" method="_on_State_Machine_Action_R_action_r_state_stack_changed"]

[editable path="Body"]
